# forecast

./: .env.template  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  SECURITY.md  benchmark_real_binary.py  e2e_real_prediction.py  mkdocs.yml  pyproject.toml  test_topologies.py
.agent/rules/: governance.md
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
docs/: agents_registry.md  architecture.md  custom_designs.md  index.md  provider-free-testing.md
docs/api/: agents.md  cache.md  causal.md  centaur.md  evaluation.md  index.md  inference.md  memory.md  optimization.md  orchestration.md  resilience.md  runtime.md  security.md  sentinel.md  skills.md  telemetry.md  tools.md  topologies.md
docs/wiki/: glossary.md
docs/wiki/concepts/: agents.md  calibration.md  epistemic_security.md  human_loop.md  merkle_sovereignty.md  orchestration.md  sentinel_protocol.md  temporal_integrity.md  tools.md
docs/wiki/patterns/: topologies.md
docs/wiki/standards/: streaming.md
examples/: analyst_pipeline.py  backtest_workflow.py  custom_graph.py  external_tools.py  minimal_agent.py
examples/core/: README.md  local_analyst.py  minimal_inference.py  orchestrator_basics.py  run_beta_calibration.py  run_cache_demo.py  run_causal_demo.py  run_chronos_sleep.py  run_epistemic_security.py  run_retry_demo.py  state_management.py
examples/core/orchestrator_basics/: README.md  run_orchestrator_basics.py
examples/core/runtime_patterns/: run_runtime_patterns.py
examples/data/: polymarket_sample.json
examples/features/: calibration_demo.py  discovery.py  enterprise_data.py  evaluation_harness.py  external_strand_tools.py  skill_protocol.py  streaming_demo.py  structured_telemetry.py  tiered_reasoning.py
examples/kit/: README.md  backtest_workflow.py  minimal_agent.py  run_centaur_demo.py  run_sentinel_demo.py
examples/pipelines/: config.py  custom_sentiment_workflow.py  forecasting_analyst.py
examples/providers/: README.md  inference_direct.py  minimal_inference.py  tool_wrapping.py
examples/topologies/: debate_demo.py
scripts/: README.md  apply_headers.py  check_docs.py  setup_dev.sh
scripts/audit/: check_docs.py
scripts/verify/: verify_eval.py  verify_lora.py
src/forecast/: __init__.py  assistants.py  config.py  version.py
tests/: conftest.py
tests/e2e/: test_analyst_pipeline.py  test_custom_graph.py  test_custom_sentiment_workflow.py  test_external_strand_tools.py  test_external_tools.py  test_forecasting_analyst.py
tests/integration/: test_backtest_runner.py  test_consensus_integration.py  test_consensus_lab.py  test_data_skills.py  test_inference_baseline.py  test_pit_search.py  test_provider_conformance.py  test_provider_symmetry.py  test_routing_agent.py  test_scenarios.py  test_temporal_orchestration.py
tests/live/: live_integration_test.py  live_smoke_test.py  test_leakage_protection_live.py  test_live_orchestration.py  test_live_providers.py
tests/local/: test_llamacpp_openai_provider.py  test_real_question_e2e.py
tests/performance/: test_sqlite_perf.py
tests/unit/: test_analytics.py  test_backtest_runner_branches.py  test_confidence.py  test_eval_coverage.py  test_evaluation_harness.py  test_factory_profiles.py  test_forecast_core.py  test_leakage_guardian.py  test_public_api.py  test_replayer.py  test_skill_protocol.py  test_state_cloning.py  test_strand_adapter.py  test_structured_telemetry.py  test_temporal_schemas.py
tests/verification/: test_calibration_metrics.py  test_chronos_basics.py  test_epistemic_security_verification.py  test_guardian_wrapper.py  test_merkle_sovereignty.py  test_runtime_best_practices.py  test_sentinel_basics.py
(+401 files in other folders)
