[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xrtm-forecast"
version = "0.1.1"
description = "Institutional-grade parallelized agentic reasoning engine."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "XRTM Team", email = "moy@xrtm.org"}
]
dependencies = [
    "pydantic>=2.0.0",
    "google-genai>=0.1.0",
    "openai>=1.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.0.0"
]

[project.urls]
Repository = "https://github.com/xrtm-org/forecast"
Issues = "https://github.com/xrtm-org/forecast/issues"

[project.optional-dependencies]
memory = [
    "chromadb>=0.4.0"
]
redis = [
    "redis>=5.0.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0"
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = [".git", ".venv", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
